--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -438,7 +438,7 @@ img {
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
                 <a style="font-weight: bold;margin-right:  auto; color: #FFFFFF;  font-family: 'Sawarabi Gothic', serif; 
                 letter-spacing: 2px;" 
-                href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
+                href="{% url 'admin_home_view' %}" class="header__logo">FOLLOW APP</a>
     
                 <div class="header__toggle">
                     <i class='bx bx-menu' id="header-toggle"></i>
@@ -471,9 +471,7 @@ img {
                                     <a href="{% url 'upload_facultyload' %}"  class="nav__dropdown-item">Upload Faculty Load</a>
                                     <a href="{% url 'upload_students' %}"   class="nav__dropdown-item">Upload Student</a>
                                     <a href="{% url 'upload_studentsload' %}"  class="nav__dropdown-item">Upload Students Load</a>
-                                    <a href="{% url 'upload_another_student' %}"  class="nav__dropdown-item">Upload Another Student</a>
-
-                                    
+                                  
                                 </div>  
                             </div>
                           </div>
