--- a/templates/director/view_stat_specific_counselor.html
+++ b/templates/director/view_stat_specific_counselor.html
@@ -1,19 +1,42 @@
-{% extends "admin/admin_home.html" %}
-{% block title %} Upload Another Student {% endblock %}
-{% block content %}
+{% extends "director/director_home.html" %}
 
+
+
+{% block content %} 
 <style>
-.faculty{
+.offering{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 50%;
-  height: 320px;
+  width: 600px;
+  height: 300px;
   border-radius: 5px;
   background-color: #98b4ac;
   float: center;
-  margin: auto;
+margin: auto;
+  text-align: center;
    line-height: 40px; 
 }
+#id_semester{
+  width: 150px;
+}
+#id_school_year{
+  width: 200px;
+}
+.column{
+ width:250px;
+ float:center;
+ margin-left: 10px;
+ padding: 10px;   
+ text-align: left;
+}
+.row{
+ width: 450px;
+ float:center;
+ text-align: left;
+}
+
+
+/* BUTTONS */
 .wrap {
   height: 100%;
   display: flex;
@@ -23,7 +46,6 @@
 }
 
 .button {
-  margin: 0 auto;
   width: 140px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
@@ -39,6 +61,7 @@
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+
   }
 
 .button:hover {
@@ -56,7 +79,6 @@
 
 .buttonF {
   position: fixed;
-
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -74,34 +96,34 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
   }
-  .input{
-    margin: 0 auto;
-  height: 30px;
-  font-weight: 500;
-  }
+#id_program_designation{
+  width: 95px;
+}
 
+.bText{
+  color: #fff;
+}
 </style>
-<div class="fac">
-  <button type="submit" class="buttonF"><b>Upload Another Student</b></button>
-</div> 
-<br> <br> <br> <br>
-<div class="faculty">
-<br>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <center><input type="file" name="myfile" class="input"></center>
-   <br> <br>
-    <div class="wrap">
-      <button type="submit" class="button">Upload</button>
-    </div>
-  </form>
-  {% for message in messages %}
-  <center> <b><p>{{message}} !</p> </b></center>
-{% endfor %}
+mao ni a kani nga counselor {{couns.lastname}} {{couns.firstname}}<br>
+month {{stat_month}} <br>
+    today {{stat_day}}<br>
+    year {{stat_year}}<br>
 
-                
-</div>
+     {% for form in referals %}
+      <tbody>
+        <br>
+      <tr>
+          <td>{{form.firstname}}</td>
+          <td>{{form.lastname}}</td>
+          <td>{{form.date}}</td>
+          <td>{{form.start_time}} - {{form.end_time}} </td>
+        
+      </tr>
+      <tbody>
+        {% endfor %}
 
-  {% endblock %}
+{% endblock %}
 
-  
+
+
+
