--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -416,7 +416,7 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 70%;
   padding: 30px;
-  text-align: center#f1f1f1;
+  text-align: center #f1f1f1;
   border-radius: 5px;
   transition: 0.3s;
   margin-left: 10px;
@@ -463,7 +463,7 @@ img {
  .studlistCard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2px;
-  text-align: centerd#f1f1f1;
+  text-align: centerd #f1f1f1;
   border-radius: 5px;
   transition: 0.3s;
   margin-left: 10px;
@@ -748,7 +748,7 @@ outline: none;
                               <span class="nav__name">Notifications {{teacherNotif}}</span>
                           </a>
                             
-                              <a href="{% url 'teacher_view_referred_students' %}" class="nav__link">
+                              <a href="{% url 'teacher_view_referred_students' 'all' %}" class="nav__link">
                                   <i class='bx bx-user-pin nav__icon' ></i>
                                   <span class="nav__name">View Referred Student</span>
                                   <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
