--- a/templates/director/assign_counselor.html
+++ b/templates/director/assign_counselor.html
@@ -347,7 +347,7 @@ Assign Counselor
         <tr>
           <td><p class="table_words"><b>{{object.lastname}}, &nbsp; {{object.firstname}}</b></p></td>
           <td>
-            <a href="{% url 'director_fillinForm' object.employee_id %}"><button type="submit" class="button">Assign</button></a>
+            <a href="{% url 'director_fillinForm' object.employee_id %}"><button type="submit" class="button"><b>Assign</b></button></a>
           </td>
         
       </tr>
