--- a/templates/student/view_history.html
+++ b/templates/student/view_history.html
@@ -4,216 +4,206 @@ Notifications
 {% endblock %} 
 {% block content %}
 <style>
-       .card{
-      display: flex;
-      padding: 20px;
-      max-width: 408px;
-   padding-left: 5px;
-      height: 210px;
-      margin: 20px;
-      border-radius: 10px;
-      background-color: #98adb4;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-      overflow-y: scroll;
-      float: left;
-      flex-wrap: row;
-      margin-left: 140px;
-      align-items: stretch;
-     
-      
-      
-      
-    }
-.txtFont{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; margin-right: 30px; 
-  display: flex;
-  font-size: 17px;
-  text-overflow: ellipsis;
-  align-items: start;
-}
-.txtFonty{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; 
-  display: flex;
-  font-size: 17px; margin-left: 10px;
-  text-overflow: ellipsis;
-  margin-top: 8px;
-  align-items: center;
-  /* justify-content: center; */
-}
-/* === TABLE ==== */
-.table-box
-{
-    margin: 15px auto;
-    
-}
-
-.table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-    
-}
-.table-head{
+   
+  .modal{
+  font-size: 19px;
+  }
+  .container{
+  border-radius: 10px;
+  background-color: #B4CFEC;
+  box-shadow:
+  0 9px 33px rgba(0, 0, 0, 0.07);
+  width: 1200px;
+  height: 400px;
+  float: center;
+  margin-left: 15px;
+  }
   
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    height: 20px;
-    line-height: 5px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    justify-content: left;
-    margin: auto;
- 
-}
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 3.33%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #d8c090;
-    vertical-align: middle;
-    
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 10%;
-}
-
-.last-cell{
-    border-right: none;
-    width: 10%;
-}
-/* a{
-    text-decoration: none;
-    color: #555;
-} */
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 20px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
+  
+  .fac{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
   }
-}
-.trow-list{
-      display: table;
-    width: 85%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: #E3E4FA;
-    padding: 4px 0;
-    color: #d8c090;
-    font-size: 15px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    line-height: 5px;
-}
-    #customers {
-      font-family: Arial, Helvetica, sans-serif;
+  
+  .buttonF {
+    position: fixed;
+  width: 100%;
+  min-width: 1320px;
+  height: 60px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #d8c090;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+    }
+  
+    /* Table Styles */
+  
+  .table-wrapper{
+      margin: 10px 70px 70px;
+      box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  }
+  
+  .fl-table {
+      border-radius: 5px;
+      font-size: 12px;
+      font-weight: normal;
+      border: none;
       border-collapse: collapse;
-      width: 97%;
-    }
-    
-    #customers td, #customers th {
-      border: 1px solid #ddd;
-      padding: 10px;
-    }
-    
-    #customers tr:nth-child(even){background-color: #f2f2f2;}
-    
-    #customers tr:hover {background-color: #ddd;}
-    
-    #customers th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #E3E4FA;
-      color: white;
-    }
-    .fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+      width: 100%;
+      max-width: 100%;
+      white-space: nowrap;
+      background-color: white;
+      overflow-y: scroll;
   }
+  
+  .fl-table td, .fl-table th {
+      text-align: center;
+      padding: 8px;
+  }
+  
+  .fl-table td {
+      border-right: 1px solid #f8f8f8;
+      font-size: 12px;
+  }
+  
+  .fl-table thead th {
+      color: #ffffff;
+      background: #98b4ac;
+  }
+  
+  .fl-table thead th:nth-child(odd) {
+      color: #ffffff;
+      background: #98b4ac;
+  }
+  
+  .fl-table tr:nth-child(even) {
+      background: #F8F8F8;
+  }
+      tr:nth-child(odd):hover td {
+    background:#C1C3D1;
+  }
+  
+  /* Responsive */
+  
+  @media (max-width: 767px) {
+      .fl-table {
+          display: block;
+          width: 100%;
+      }
+      .table-wrapper:before{
+          content: "Scroll horizontally >";
+          display: block;
+          text-align: right;
+          font-size: 11px;
+          color: white;
+          padding: 0 0 10px;
+      }
+      .fl-table thead, .fl-table tbody, .fl-table thead th {
+          display: block;
+      }
+      .fl-table thead th:last-child{
+          border-bottom: none;
+      }
+      .fl-table thead {
+          float: left;
+      }
+      .fl-table tbody {
+          width: auto;
+          position: relative;
+          overflow-x: auto;
+      }
+      .fl-table td, .fl-table th {
+          padding: 20px .625em .625em .625em;
+          height: 60px;
+          vertical-align: middle;
+          box-sizing: border-box;
+          overflow-x: hidden;
+          overflow-y: auto;
+          width: 120px;
+          font-size: 13px;
+          text-overflow: ellipsis;
+      }
+      .fl-table thead th {
+          text-align: left;
+          border-bottom: 1px solid #f7f7f9;
+      }
+      .fl-table tbody tr {
+          display: table-cell;
+      }
+      .fl-table tbody tr:nth-child(odd) {
+          background: none;
+      }
+      .fl-table tr:nth-child(even) {
+          background: transparent;
+      }
+      .fl-table tr td:nth-child(odd) {
+          background: #F8F8F8;
+          border-right: 1px solid #E6E4E4;
+      }
+      .fl-table tr td:nth-child(even) {
+          border-right: 1px solid #E6E4E4;
+      }
+      .fl-table tbody td {
+          display: block;
+          text-align: center;
+      }
+  }
+  .table_head{
+    font-size: 17px;
+  }
+    .t-body{
+    font-size: 20px;
+  }
+  </style>
 
-
-</style>
+  <div class="table-cont">
         <div class="fac">
           <button type="submit" class="buttonF">History</button>
-        </div> 
-<br>
-<table id="customers">
-  <tr>
-  <th style="text-align:center; color: black;">Counselor's Name</th>
-  <th style="text-align:center; color: black;">Date</th>
-  <th style="text-align:center; color: black;">Time</th>
-
-</tr>
-
-
-
-{% for obj in object reversed %}
+        </div>   
+        <br>
+        <div class="table-wrapper">
+          <table class="fl-table">
+              <thead>
+              <tr>
+                <th class="table_head">Counselor's Name</th>
+                <th class="table_head">Date of Counseling</th>
+                <th class="table_head">Time of Counseling</th>
+              </tr>
+              </thead>
+              {% for obj in object reversed %}
 {% for couns in counselor %}
-<!-- {{couns.employee_id}}
-{{obj.counselor}}  -->
-
+              <tbody>
+                  
 {% if couns.employee_id == obj.counselor %}
-<tr>
-<td>{{couns.firstname}} {{couns.lastname}}</td>
-<td> {{obj.date}}</td>
-<td>{{obj.start_time}} - {{obj.end_time}}</td>
-
-</tr>
-{% endif %}
+              <tr>
+                  <td style="font-size: 16px;">{{couns.lastname}}, &nbsp; {{couns.firstname}}</td>
+                  <td style="font-size: 16px;">{{obj.date}}</td>
+                  <td style="font-size: 16px;">{{obj.start_time}} - {{obj.end_time}}</td>
+              </tr>
+              <tbody>
+                {% endif %}
 {% endfor %}
 {% endfor %}
-</table>
-{% if not object %}
-<center><p><b>No Records Yet</b></p></center>
-{% endif %}
+          </table>
+<div style="padding: 2px;">
+  {% if not object %}
+ <center><p><b>No Records Yet</b></p></center>
+       {% endif %}
+</div>
+        
+        </div>
+        
 {% endblock %}
 
 
