--- a/templates/director/view_stats.html
+++ b/templates/director/view_stats.html
@@ -4,40 +4,289 @@
 
 {% block content %} 
 <style>
-.offering{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 600px;
-  height: 300px;
-  border-radius: 5px;
-  background-color: #98b4ac;
-  float: center;
-margin: auto;
+  tr {
+    border-top: 1px solid #C1C3D1;
+    border-bottom: 1px solid #C1C3D1;
+    color:#504A4B;
+    font-size:16px;
+    font-weight:normal;
+    text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+  
+  }
+   
+  tr:hover td {
+    background:#4863A0;
+    color:#4863A0;
+    border-top: 1px solid #4863A0;
+  }
+   
+  tr:first-child {
+    border-top:none;
+  }
+  
+  tr:last-child {
+    border-bottom:none;
+  }
+   
+  tr:nth-child(odd) td {
+    background:#EBEBEB;
+  }
+   
+  tr:nth-child(odd):hover td {
+    background:#C1C3D1;
+  }
+  
+  tr:last-child td:first-child {
+    border-bottom-left-radius:3px;
+  }
+   
+  tr:last-child td:last-child {
+    border-bottom-right-radius:3px;
+  }
+   
+  td {
+    background:#FFFFFF;
+    padding: 10px;
+    text-align:left;
+    vertical-align:middle;
+    font-weight:300;
+    font-size:18px;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    border-right: 1px solid #C1C3D1;
+   
+  }
+  
+  td:last-child {
+    border-right: 0px;
+  }
+  
+  th.text-left {
+    text-align: left;
+  }
+  
+  th.text-center {
+    text-align: center;
+  }
+  
+  th.text-right {
+    text-align: right;
+  }
+  
+  td.text-left {
+    text-align: center;
+  }
+  
+  td.text-center {
+    text-align: center;
+  }
+  
+  td.text-right {
+    text-align: right;
+  }
+  .facDay{
+    
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    
+    }
+    
+    .buttonDay {
+    width: 320px;
+    height: 55px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    margin-left: 10px;
+    }
+    .fac{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  .buttonF {
+    position: fixed;
+  width: 100%;
+  min-width: 1320px;
+  height: 60px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #d8c090;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+  #id_pickedDate{
+    width: 250px;
+    height: 35px;
+    color: #3A3B3C;
+  }
+  
+  .button {
+    margin: 0 auto;
+    width: 96px;
+    height: 27px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    }
+  
+    .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+  }
+  
+  /* Table Styles */
+  
+  .table-wrapper{
+      margin: 10px 70px 70px;
+      box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  }
+  
+  .fl-table {
+      border-radius: 5px;
+      font-size: 12px;
+      font-weight: normal;
+      border: none;
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 100%;
+      white-space: nowrap;
+      background-color: white;
+      overflow-y: scroll;
+  }
+  
+  .fl-table td, .fl-table th {
+      text-align: center;
+      padding: 8px;
+  }
+  
+  .fl-table td {
+      border-right: 1px solid #f8f8f8;
+      font-size: 12px;
+  }
+  
+  .fl-table thead th {
+      color: #ffffff;
+      background: #98b4ac;
+  }
+  
+  .fl-table thead th:nth-child(odd) {
+      color: #ffffff;
+      background: #98b4ac;
+  }
+  
+  .fl-table tr:nth-child(even) {
+      background: #F8F8F8;
+  }
+  
+  /* Responsive */
+  
+  @media (max-width: 767px) {
+      .fl-table {
+          display: block;
+          width: 100%;
+      }
+      .table-wrapper:before{
+          content: "Scroll horizontally >";
+          display: block;
+          text-align: right;
+          font-size: 11px;
+          color: white;
+          padding: 0 0 10px;
+      }
+      .fl-table thead, .fl-table tbody, .fl-table thead th {
+          display: block;
+      }
+      .fl-table thead th:last-child{
+          border-bottom: none;
+      }
+      .fl-table thead {
+          float: left;
+      }
+      .fl-table tbody {
+          width: auto;
+          position: relative;
+          overflow-x: auto;
+      }
+      .fl-table td, .fl-table th {
+          padding: 20px .625em .625em .625em;
+          height: 60px;
+          vertical-align: middle;
+          box-sizing: border-box;
+          overflow-x: hidden;
+          overflow-y: auto;
+          width: 120px;
+          font-size: 13px;
+          text-overflow: ellipsis;
+      }
+      .fl-table thead th {
+          text-align: left;
+          border-bottom: 1px solid #f7f7f9;
+      }
+      .fl-table tbody tr {
+          display: table-cell;
+      }
+      .fl-table tbody tr:nth-child(odd) {
+          background: none;
+      }
+      .fl-table tr:nth-child(even) {
+          background: transparent;
+      }
+      .fl-table tr td:nth-child(odd) {
+          background: #F8F8F8;
+          border-right: 1px solid #E6E4E4;
+      }
+      .fl-table tr td:nth-child(even) {
+          border-right: 1px solid #E6E4E4;
+      }
+      .fl-table tbody td {
+          display: block;
+          text-align: center;
+      }
+  }
+  .center {
+  
   text-align: center;
-   line-height: 40px; 
-}
-#id_semester{
-  width: 150px;
-}
-#id_school_year{
-  width: 200px;
-}
-.column{
- width:250px;
- float:center;
- margin-left: 10px;
- padding: 10px;   
- text-align: left;
-}
-.row{
- width: 450px;
- float:center;
- text-align: left;
-}
-
-
-/* BUTTONS */
-.wrap {
+  }
+  
+  .center_title {
+  
+  text-align: center;
+  margin-right: 20px;
+  }
+  
+  .wrap {
   height: 100%;
   display: flex;
   align-items: center;
@@ -46,12 +295,12 @@ margin: auto;
 }
 
 .button {
-  width: 140px;
+  margin: 0 auto;
+  width: 155px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   text-transform: uppercase;
-  letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
   background-color: #fff;
@@ -61,7 +310,6 @@ margin: auto;
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-
   }
 
 .button:hover {
@@ -70,65 +318,44 @@ margin: auto;
   color: #fff;
   transform: translateY(-7px);
 }
-.fac{
-  display: flex;
+.table_words{
+  font-size: 15px;
+  text-align: left;
   align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-  }
-#id_program_designation{
-  width: 95px;
-}
-
-.bText{
-  color: #fff;
+  margin-left: 285px;
 }
 </style>
 
-<div style="flex-direction: row; display: flex; padding: 10px;">
-    <div style="margin-left: 13px; float: left; line-height: 30px;" >
-  <p><h4> 
-    month {{stat_month}} <br>
+month {{stat_month}} <br>
     today {{stat_day}}<br>
     year {{stat_year}}<br>
-    Statistic for this month charot ambot oy basta mao ni sya tung number of referes student karun nga month
-  There are <b>{{stat_month}}</b> refereed student this month<br>
-   <i>"Director is the heart of the bahog baba"
-                             - Rawr </i>
+    <br>
+    <br><br><br><br><br>
+<div class="fac">
+  <button type="submit" class="buttonF">Statistics</button>
+</div> 
 
-                             
-                               {% for object in couns %}
+<br>
+<div class="table-wrapper">
+  <table class="fl-table">
+      <thead>
+      <tr>
+          <th class="table_head">Counselor</th>
+          <th class="table_head">Statistics</th>
+      </tr>
+      </thead>
+      {% for object in couns %}
       <tbody>
         <tr>
           <td><p class="table_words"><b>{{object.lastname}}, &nbsp; {{object.firstname}}</b></p></td>
           <td>
-            <a href="{% url 'view_stat_specific_counselor' object.employee_id %}"><button type="submit" class="button">view chuchu</button></a>
+            <a href="{% url 'view_stat_specific_counselor' object.employee_id %}"><button type="submit" class="button"><b>View Statistics</b></button></a>
           </td>
         
       </tr>
       <tbody>
         {% endfor %}
-  </h4></p>
+  </table>
 </div>
 
 {% endblock %}
